--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <version>0.5.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
         <dependency>
