--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>by.bsuir.fksis</groupId>
     <artifactId>by.bsuir.fksis.poit</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <build>
         <plugins>
             <plugin>
@@ -29,6 +30,7 @@
     </build>
 
 
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-core -->
 
@@ -44,6 +46,18 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>21.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.xeustechnologies</groupId>
+            <artifactId>jcl-core</artifactId>
+            <version>2.8</version>
         </dependency>
 
 
